<?xml version="1.0"?>
<package>
  <name>winduppkg</name>
  <version>0.0.0</version>
  <description>The windup package</description>

  <maintainer email="asadavis1002@Gmail.com">Asa Davis</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>
  <export>

  </export>
</package>
